[metadata]
name = bitcoin-armory
version = file: VERSION
author = Armory Technologies, Inc.
author_email = support@bitcoinarmory.com
description = A Bitcoin wallet management application with enterprise-grade security
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/goatpig/BitcoinArmory
project_urls =
    Bug Reports = https://github.com/goatpig/BitcoinArmory/issues
    Source = https://github.com/goatpig/BitcoinArmory
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    PyQt5>=5.10.0
    Twisted>=16.0.0
    psutil>=5.0.0

[options.packages.find]
exclude =
    BitTornado*
    cppForSwig*
    extras*
    pytest*
    gui*
    test*

[options.entry_points]
console_scripts =
    armory = ArmoryQt:main
    armoryd = armoryd:main

[options.extras_require]
dev =
    pytest
    coverage